[CONEX] Añado primera versión de navegacion lateral

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-lat-nav-bar ></app-lat-nav-bar>
+<!--
 <div style="text-align:center">
   <h1>
     {{'titulo' | translate}}!
@@ -20,4 +22,4 @@
   </div>
 </ng-template>
 <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>
-
+-->
