[CONEX] Añado header , servicios de variables globales y componente body para la app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-lat-nav-bar ></app-lat-nav-bar>
 <!--
 <div style="text-align:center">
   <h1>
@@ -23,3 +22,5 @@
 </ng-template>
 <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>
 -->
+<app-header-app></app-header-app>
+<app-body-app></app-body-app>
