--- a/src/app/lat-nav-bar/lat-nav-bar.component.css
+++ b/src/app/lat-nav-bar/lat-nav-bar.component.css
@@ -3,7 +3,7 @@
     position: fixed;
     z-index: 1000;
     bottom: 0;
-    top:0;
+    top:5%;
     color: white;
     background: linear-gradient(50deg,#277EF4,#0A1F3B);
 }
