[CONEX] Añado navegador en buscadores de convenios

--- a/src/app/body-app/body-app.component.html
+++ b/src/app/body-app/body-app.component.html
@@ -1,1 +1,2 @@
 <app-lat-nav-bar (actualActionValue)="getAction($event)"></app-lat-nav-bar>
+<app-registro-convenios *ngIf="searchType==='convenios'"></app-registro-convenios>
