[CONEX] Añado router al proyecto y modifico la estructura de archivos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,4 +23,5 @@
 <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>
 -->
 <app-header-app></app-header-app>
-<app-body-app></app-body-app>
+<app-lat-nav-bar></app-lat-nav-bar>
+<router-outlet class="router-definition"></router-outlet>
