--- a/src/app/modules/registro-convenios/search-criteria-agreements/search-criteria-agreements.component.html
+++ b/src/app/modules/registro-convenios/search-criteria-agreements/search-criteria-agreements.component.html
@@ -1,3 +1,5 @@
-<p>
-  search-criteria-agreements works!
-</p>
+<div class="search_criteria">
+  <p>
+    search-criteria-agreements works!
+  </p>
+</div>
