--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,4 +24,6 @@
 -->
 <app-header-app></app-header-app>
 <app-lat-nav-bar></app-lat-nav-bar>
-<router-outlet class="router-definition"></router-outlet>
+<div class="router-definition">
+  <router-outlet></router-outlet>
+</div>
