--- a/src/app/modules/registro-convenios/search-criteria-agreements/search-criteria-agreements.component.html
+++ b/src/app/modules/registro-convenios/search-criteria-agreements/search-criteria-agreements.component.html
@@ -1,26 +1,27 @@
 <div class="search_criteria">
   <div class="row">
     <div class="col-md-10 offset-md-1">
-      <form [formGroup]="formpro" 
-            (ngSubmit)="searchCriteria()">
+      <form (ngSubmit)="searchCriteria()">
         <div class="form-group row">
           <label for="titulo" class="col-sm-3 col-form-label">{{'buscador.titulo_object' | translate}}</label>
           <div class="col-sm-3">
             <input  type="text" 
                     class="form-control" 
                     id="titulo"
-                    ngModel
-                    formControlName="titulo">
+                    name="titulo"
+                    [(ngModel)]="convenio.titulo">
           </div>
         </div>
         <div class="form-group row entidades">
           <label for="organo_responsable" class="col-sm-3 col-form-label">{{'buscador.organo_responsable' | translate}}</label>
           <div class="col-sm-6">
-            <select class="form-control"
+            <select class="form-control selectpicker"
                     id="organo_responsable"
-                    ngModel
-                    formControlName="organo_responsable">
-              <option>Default select</option>
+                    name="organo_responsable"
+                    [(ngModel)]="convenio.organo_responsable"
+                    (change)="hiddenDefaultOption(hiddenOrgano)">
+              <option [hidden]="hiddenOrgano">Selecione una opción</option>
+              <option *ngFor="let organo of organoRespnsable">{{organo.name}}{{organo.id}}</option>
             </select>
           </div>
         </div>
@@ -33,8 +34,8 @@
               <input  type="date" 
                       class="form-control" 
                       id="desde_description_organo"
-                      ngModel
-                      formControlName="desde_description_organo" />
+                      name="desde_description_organo"
+                      [(ngModel)]="convenio.desde_description_organo" />
             </div>
           </div>
           <div class="form-group row col-sm-4">
@@ -43,8 +44,8 @@
               <input  type="date" 
                       class="form-control" 
                       id="hasta_description_organo"
-                      ngModel
-                      formControlName="hasta_description_organo" />
+                      name="hasta_description_organo"
+                      [(ngModel)]="convenio.hasta_description_organo" />
             </div>
           </div>
         </div>
@@ -54,8 +55,8 @@
             <input  type="text" 
                     class="form-control num_convenio_abled" 
                     id="num_convenio_1"
-                    ngModel
-                    formControlName="num_convenio_1">
+                    name="num_convenio_1"
+                    [(ngModel)]="convenio.num_convenio_1">
             <input  type="text" 
                     class="num_convenio_disbled" 
                     disabled="true" 
@@ -63,8 +64,8 @@
             <input  type="text" 
                     class="form-control num_convenio_abled" 
                     id="num_convenio_2"
-                    ngModel
-                    formControlName="num_convenio_2">
+                    name="num_convenio_2"
+                    [(ngModel)]="convenio.num_convenio_2">
             <input  type="text" 
                     class="num_convenio_disbled" 
                     disabled="true" 
@@ -72,8 +73,8 @@
             <input  type="text" 
                     class="form-control num_convenio_abled" 
                     id="num_convenio_3"
-                    ngModel
-                    formControlName="num_convenio_3">
+                    name="num_convenio_3"
+                    [(ngModel)]="convenio.num_convenio_3">
             <input  type="text" 
                     class="num_convenio_disbled" 
                     disabled="true" 
@@ -81,8 +82,8 @@
             <input  type="text" 
                     class="form-control num_convenio_abled" 
                     id="num_convenio_4"
-                    ngModel
-                    formControlName="num_convenio_4">
+                    name="num_convenio_4"
+                    [(ngModel)]="convenio.num_convenio_4">
           </div>
         </div>
         <div class="form-group row">
@@ -93,8 +94,8 @@
               <input  type="text" 
                       class="form-control"
                       id="desde_importe_gastos"
-                      ngModel
-                      formControlName="desde_importe_gastos" />
+                      name="desde_importe_gastos"
+                      [(ngModel)]="convenio.desde_importe_gastos" />
             </div>
           </div>
           <div class="form-group row col-sm-4">
@@ -103,8 +104,8 @@
               <input  type="text" 
                       class="form-control"
                       id="hasta_importe_gastos" 
-                      ngModel
-                      formControlName="hasta_importe_gastos" />
+                      name="hasta_importe_gastos" 
+                      [(ngModel)]="convenio.hasta_importe_gastos" />
             </div>
           </div>
         </div>
@@ -116,8 +117,8 @@
               <input  type="text" 
                       class="form-control"
                       id="desde_importe_ingresos"
-                      ngModel 
-                      formControlName="desde_importe_ingresos" />
+                      name="desde_importe_ingresos"
+                      [(ngModel)]="convenio.desde_importe_ingresos" />
             </div>
           </div>
           <div class="form-group row col-sm-4">
@@ -126,8 +127,8 @@
               <input  type="text" 
                       class="form-control"
                       id="hasta_importe_ingresos"
-                      ngModel 
-                      formControlName="hasta_importe_ingresos" />
+                      name="hasta_importe_ingresos"
+                      [(ngModel)]="convenio.hasta_importe_ingresos" />
             </div>
           </div>
         </div>
@@ -137,8 +138,8 @@
             <input  type="text" 
                     class="form-control" 
                     id="organos_firmantes"
-                    ngModel
-                    formControlName="organos_firmantes">
+                    name="organos_firmantes"
+                    [(ngModel)]="convenio.organos_firmantes">
           </div>
         </div>
         <div class="form-group row entidades">
@@ -148,8 +149,8 @@
               <input  type="text" 
                       class="form-control"
                       id="entidades_firmantes"
-                      ngModel 
-                      formControlName="entidades_firmantes" />
+                      name="entidades_firmantes"
+                      [(ngModel)]="convenio.entidades_firmantes" />
             </div>
           </div>
           <div class="form-group row col-sm-6">
@@ -157,8 +158,8 @@
             <div class="col-sm-6">
               <select class="form-control" 
                       id="tipo_entidades"
-                      ngModel 
-                      formControlName="tipo_entidades" >
+                      name="tipo_entidades"
+                      [(ngModel)]="convenio.tipo_entidades" >
                 <option>Default select</option>
               </select>
             </div>
@@ -170,8 +171,8 @@
             <div class="col-sm-7">
               <select class="form-control" 
                       id="tipo_convenio"
-                      ngModel 
-                      formControlName="tipo_convenio">
+                      name="tipo_convenio"
+                      [(ngModel)]="convenio.tipo_convenio">
                 <option>Default select</option>
               </select>
             </div>
@@ -181,8 +182,8 @@
             <div class="col-sm-6">
               <select class="form-control" 
                       id="materia"
-                      ngModel 
-                      formControlName="materia">
+                      name="materia"
+                      [(ngModel)]="convenio.materia">
                 <option>Default select</option>
               </select>
             </div>
