[CONEX] Finalizo carga de datos mock en el buscador de convenios

--- a/src/app/modules/registro-convenios/search-criteria-agreements/search-criteria-agreements.component.html
+++ b/src/app/modules/registro-convenios/search-criteria-agreements/search-criteria-agreements.component.html
@@ -187,8 +187,10 @@
               <select class="form-control" 
                       id="materia"
                       name="materia"
-                      [(ngModel)]="convenio.materia">
-                <option>Default select</option>
+                      [(ngModel)]="convenio.materia"
+                      (change)="hiddenDefaultOption()">
+                <option [hidden]="hiddenOrgano">Selecione</option>
+                <option *ngFor="let materiaOption of materia">{{materiaOption.name}}</option>
               </select>
             </div>
           </div>
