--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,12 +1,13 @@
-<div class="modal-header">
-  <h4 class="modal-title">Modal title</h4>
-  <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+<div class="backgroung_modal_error">
+  <p class="title-modal">{{title_modal}}</p>
+  <button  class="close-modal" aria-label="Close" (click)="activeModal.close('Cross click')">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <div class="modal-body">
-  <p>One fine body&hellip;</p>
+  <img class="logo_warning" src="../../../assets/images/warning.jpg">
+  <span >{{data}}</span>
 </div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>
+<div class="backgroung_modal_error">
+  <button type="button" class="button-modal" (click)="activeModal.close('Close click')">Close</button>
 </div>
