[CONEX] Primera version de maquetacion de detalles de convenio

--- a/src/app/modules/agreements/detail-agreement/detail-agreement.component.css
+++ b/src/app/modules/agreements/detail-agreement/detail-agreement.component.css
@@ -3,7 +3,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #EBE7E7;
+    background-color: #E8EBEF;
 }
 li {
     float: left;
