--- a/src/app/modules/agreements/detail-agreement/show-detail/show-detail.component.html
+++ b/src/app/modules/agreements/detail-agreement/show-detail/show-detail.component.html
@@ -1,3 +1,138 @@
-<p>
-  show-detail works!
-</p>
+<div class="border-box header_div">
+  <div class="title-box">
+    {{'show-details-agreements.datos_convenio' | translate}}
+  </div>
+  <div class="body-box">
+    <div class="row">
+      <div class="col">
+        <div class="title-box border-box box_header">
+          {{'show-details-agreements.fecha_formalizacion' | translate}}
+        </div>
+        <div class="body_box">
+          <input type="text" class="new_form_control margin_input" disabled>
+        </div>
+      </div>
+      <div class="col">
+        <div class="title-box border-box box_header">
+          {{'show-details-agreements.num_expediente' | translate}}
+        </div>
+        <div class="body_box">
+          <input type="text" class="new_form_control margin_input" disabled>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <form class="form-inline margin_form">
+          <label class="my-1 mr-2">Preference</label>
+          <select class="custom-select margin_input" disabled>
+          </select>
+        </form>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="title-box border-box big_box_header">
+          {{'show-details-agreements.fecha_formalizacion' | translate}}
+        </div>
+        <div class="body_big_box">
+          <div class="row">
+            <div class="col">
+              {{'show-details-agreements.fecha_formalizacion' | translate}}
+              <input type="text" class="new_form_control margin_input" disabled>
+            </div>
+            <div class="col">
+              {{'show-details-agreements.fecha_formalizacion' | translate}}
+              <input type="text" class="new_form_control margin_input" disabled>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="title-box border-box big_box_header">
+          {{'show-details-agreements.fecha_formalizacion' | translate}}
+        </div>
+        <div class="body_big_box">
+          <div class="row">
+            <div class="col">
+                {{'show-details-agreements.fecha_formalizacion' | translate}}
+                <input type="text" class="new_form_control margin_input" disabled>
+            </div>
+            <div class="col">
+                {{'show-details-agreements.fecha_formalizacion' | translate}}
+                <input type="text" class="new_form_control margin_input" disabled>
+            </div>
+            <div class="col">
+                {{'show-details-agreements.fecha_formalizacion' | translate}}
+                <input type="text" class="new_form_control margin_input" disabled>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="form-group row" style="margin-left: 28%">
+          <label for="inputPassword">Password</label>
+          <div class="col-sm-8">
+            <input input type="text" class="new_form_control margin_input_3col" disabled>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group row" style="margin-left: 20%">
+          <label for="inputPassword">Password</label>
+          <div class="col-sm-8">
+            <input input type="text" class="new_form_control margin_input_3col" disabled>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group row">
+          <label for="inputPassword">Password</label>
+          <div class="col-sm-6">
+            <input input type="text" class="new_form_control margin_input_3col" disabled>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="title-box border-box box_header">
+          {{'show-details-agreements.fecha_formalizacion' | translate}}
+        </div>
+        <div class="body_box">
+          <input type="text" class="new_form_control margin_input" disabled>
+        </div>
+      </div>
+      <div class="col">
+        <div class="title-box border-box box_header">
+          {{'show-details-agreements.num_expediente' | translate}}
+        </div>
+        <div class="body_box">
+          <input type="text" class="new_form_control margin_input" disabled>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="form-group row" style="margin-left: 28%">
+          <label for="inputPassword">Password</label>
+          <div class="col-sm-8">
+            <input input type="text" class="new_form_control margin_input_3col" disabled>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group row" style="margin-left: 20%">
+          <label for="inputPassword">Password</label>
+          <div class="col-sm-8">
+            <input input type="text" class="new_form_control margin_input_3col" disabled>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
