--- a/src/app/modules/agreements/detail-agreement/show-detail/show-detail.component.html
+++ b/src/app/modules/agreements/detail-agreement/show-detail/show-detail.component.html
@@ -24,8 +24,8 @@
     <div class="row">
       <div class="col">
         <form class="form-inline margin_form">
-          <label class="my-1 mr-2">Preference</label>
-          <select class="custom-select margin_input" disabled>
+          <label class="my-1 mr-2">{{'show-details-agreements.titulo' | translate}}</label>
+          <select class="custom-select margin_select" disabled>
           </select>
         </form>
       </div>
@@ -33,16 +33,16 @@
     <div class="row">
       <div class="col">
         <div class="title-box border-box big_box_header">
-          {{'show-details-agreements.fecha_formalizacion' | translate}}
+          {{'show-details-agreements.organos_firmantes' | translate}}
         </div>
         <div class="body_big_box">
           <div class="row">
             <div class="col">
-              {{'show-details-agreements.fecha_formalizacion' | translate}}
+              {{'show-details-agreements.firmantes' | translate}}
               <input type="text" class="new_form_control margin_input" disabled>
             </div>
             <div class="col">
-              {{'show-details-agreements.fecha_formalizacion' | translate}}
+              {{'show-details-agreements.obligados' | translate}}
               <input type="text" class="new_form_control margin_input" disabled>
             </div>
           </div>
@@ -52,20 +52,20 @@
     <div class="row">
       <div class="col">
         <div class="title-box border-box big_box_header">
-          {{'show-details-agreements.fecha_formalizacion' | translate}}
+          {{'show-details-agreements.entidades_firmantes' | translate}}
         </div>
         <div class="body_big_box">
           <div class="row">
             <div class="col">
-                {{'show-details-agreements.fecha_formalizacion' | translate}}
+                {{'show-details-agreements.entidad' | translate}}
                 <input type="text" class="new_form_control margin_input" disabled>
             </div>
             <div class="col">
-                {{'show-details-agreements.fecha_formalizacion' | translate}}
+                {{'show-details-agreements.firmantes' | translate}}
                 <input type="text" class="new_form_control margin_input" disabled>
             </div>
             <div class="col">
-                {{'show-details-agreements.fecha_formalizacion' | translate}}
+                {{'show-details-agreements.obligados' | translate}}
                 <input type="text" class="new_form_control margin_input" disabled>
             </div>
           </div>
@@ -75,15 +75,15 @@
     <div class="row">
       <div class="col">
         <div class="form-group row" style="margin-left: 28%">
-          <label for="inputPassword">Password</label>
-          <div class="col-sm-8">
+          <label for="inputPassword">{{'show-details-agreements.tipo_convenio' | translate}}</label>
+          <div class="col-sm-7">
             <input input type="text" class="new_form_control margin_input_3col" disabled>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="form-group row" style="margin-left: 20%">
-          <label for="inputPassword">Password</label>
+          <label for="inputPassword">{{'show-details-agreements.materia' | translate}}</label>
           <div class="col-sm-8">
             <input input type="text" class="new_form_control margin_input_3col" disabled>
           </div>
@@ -91,7 +91,7 @@
       </div>
       <div class="col">
         <div class="form-group row">
-          <label for="inputPassword">Password</label>
+          <label for="inputPassword">{{'show-details-agreements.anexos' | translate}}</label>
           <div class="col-sm-6">
             <input input type="text" class="new_form_control margin_input_3col" disabled>
           </div>
@@ -101,7 +101,7 @@
     <div class="row">
       <div class="col">
         <div class="title-box border-box box_header">
-          {{'show-details-agreements.fecha_formalizacion' | translate}}
+          {{'show-details-agreements.vigencia' | translate}}
         </div>
         <div class="body_box">
           <input type="text" class="new_form_control margin_input" disabled>
@@ -109,7 +109,7 @@
       </div>
       <div class="col">
         <div class="title-box border-box box_header">
-          {{'show-details-agreements.num_expediente' | translate}}
+          {{'show-details-agreements.importe' | translate}}
         </div>
         <div class="body_box">
           <input type="text" class="new_form_control margin_input" disabled>
@@ -119,7 +119,7 @@
     <div class="row">
       <div class="col">
         <div class="form-group row" style="margin-left: 28%">
-          <label for="inputPassword">Password</label>
+          <label for="inputPassword">{{'show-details-agreements.prorroga' | translate}}</label>
           <div class="col-sm-8">
             <input input type="text" class="new_form_control margin_input_3col" disabled>
           </div>
@@ -127,7 +127,7 @@
       </div>
       <div class="col">
         <div class="form-group row" style="margin-left: 20%">
-          <label for="inputPassword">Password</label>
+          <label for="inputPassword">{{'show-details-agreements.duracion' | translate}}</label>
           <div class="col-sm-8">
             <input input type="text" class="new_form_control margin_input_3col" disabled>
           </div>
