--- a/src/app/modules/agreements/detail-agreement/detail-agreement.component.css
+++ b/src/app/modules/agreements/detail-agreement/detail-agreement.component.css
@@ -6,6 +6,9 @@ ul {
     background-color: #E8EBEF;
 }
 li {
+    margin-left: 2%;
+    margin-top:0.3%;
+    margin-bottom: 0.3%;
     float: left;
     text-align: center;
     padding: 16px;
