--- a/src/app/modules/agreements/detail-agreement/show-detail/show-detail.component.css
+++ b/src/app/modules/agreements/detail-agreement/show-detail/show-detail.component.css
@@ -73,8 +73,11 @@ input:disabled {
     border: 1px solid #FAF6F6;
 }
 .margin_select{
-    height: 25px;
-    width: 75%;
-    margin-top: 2%;
-    margin-bottom: 2%;
+    height: 40px;
+    width: 80%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+.margin_doble_input_box{
+    margin-bottom: 0%;
 }
