[Conex] Añado función para descargar pdf

--- a/src/app/modules/agreements/detail-agreement/detail-agreement.component.html
+++ b/src/app/modules/agreements/detail-agreement/detail-agreement.component.html
@@ -17,5 +17,5 @@
 <app-show-detail    *ngIf="isSelected ==='convenios'"
                     [detailAgreement]="details_agreement">
                 </app-show-detail>
-<app-related *ngIf="isSelected ==='archivos'"></app-related>
-<app-folders *ngIf="isSelected ==='relacionados'"></app-folders>
+<app-related *ngIf="isSelected ==='relacionados'"></app-related>
+<app-folders *ngIf="isSelected ==='archivos'"></app-folders>
