--- a/src/app/layouts/modal-two-button/modal-two-button.component.html
+++ b/src/app/layouts/modal-two-button/modal-two-button.component.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
   <div class="modal-header background-header-footer">
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="activeModal.close('Cross click')">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="activeModal.close()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
@@ -17,8 +17,15 @@
     </div>
   </div>
   <div class="modal-footer background-header-footer">
-      <button type="button" class="btn btn-light">Abrir</button>
-    <button type="button" class="btn btn-light">Guardar</button>
-    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    <button type="button" 
+            class="btn btn-light"
+            (click)="activeModal.close('abrir')">Abrir</button>
+    <button type="button" 
+            class="btn btn-light"
+            (click)="activeModal.close('guardar')">Guardar</button>
+    <button type="button" 
+            class="btn btn-secondary" 
+            data-dismiss="modal"
+            (click)="activeModal.close()">Close</button>
   </div>
 </div>
