[CONEX] Se añade funcionalidad a la ventana modal de descargas y la ventana de relacionados

--- a/src/app/layouts/modal-two-button/modal-two-button.component.html
+++ b/src/app/layouts/modal-two-button/modal-two-button.component.html
@@ -11,8 +11,8 @@
       </div>
       <div class="col-md-8">
         <p>¿Desea abrir o guardar este archivo?</p>
-        <p>nombreArchivo.pdf</p>
-        <p>fecha_de_archivo</p>
+        <p>{{archivo.name}}.pdf</p>
+        <p>{{archivo.registered.substr(0,10)}}</p>
       </div>
     </div>
   </div>
