--- a/src/app/modules/agreements/detail-agreement/folders/folders.component.html
+++ b/src/app/modules/agreements/detail-agreement/folders/folders.component.html
@@ -8,13 +8,14 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td style="width: 10%">Algo</td>
-      <td style="width: 15%">Algo</td>
-      <td style="width: 15%">Algo</td>
-      <td class="down-load-file" style="width: 45%" (click)="downloadFile()">
+    <tr  *ngFor="let lista of listDetailsAgreement| paginate :{itemsPerPage: 7 , currentPage:pagination}">
+      <td style="width: 10%">{{lista.registered.substr(0,10)}}</td>
+      <td style="width: 15%">{{lista.name}}</td>
+      <td style="width: 50%">{{lista.about}}</td>
+      <td class="down-load-file" style="width: 10%" (click)="downloadFile(lista)">
         <img class="ico_pdf" src="../../../assets/images/pdf_icono.ico"> {{'folder.descargar' | translate}}
       </td>
     </tr>
   </tbody>
 </table>
+<pagination-controls (pageChange)="pagination=$event"></pagination-controls>
