--- a/src/app/layouts/nav-bar/nav-bar.component.html
+++ b/src/app/layouts/nav-bar/nav-bar.component.html
@@ -1,34 +1,32 @@
+<img class="logo_madrid" src="../../../assets/images/madrid.png">
 <nav class="lat-nav">
-  <div class="user-zone">
-    {{nombreUsuario}}
-    <hr /> {{centro}}
-  </div>
-  <div class="link-zone">
-      <ul>
-        <li [ngClass]="{'is_active': isActive ==='filtro' , 'not_active': isActive !=='filtro' }">
-            {{'nav_bar.filtro_instrumentos' | translate}}
-        </li>
-        <li [ngClass]="{'is_active': isActive ==='convenios' , 'not_active': isActive !=='convenios' }"
-            (click)="showModel('convenios')"
-            routerLink="/">
-            {{'nav_bar.convenios' | translate}}
-        </li>
-        <li [ngClass]="{'is_active': isActive ==='parcels' , 'not_active': isActive !=='parcels' }"
-            (click)="showModel('parcels')"
-            routerLink="/parcels">
-            {{'nav_bar.encomiendas' | translate}}
-        </li>
-        <li [ngClass]="{'is_active': isActive ==='decrees' , 'not_active': isActive !=='decrees' }"
-            (click)="showModel('decrees')"
-            routerLink="/decrees">
-            {{'nav_bar.decretos_resoluciones' | translate}}
-        </li>
-        <li [ngClass]="{'is_active': isActive ==='accesos' , 'not_active': isActive !=='accesos' }">
-            {{'nav_bar.accesos' | translate}}
-        </li>
-        <li [ngClass]="{'is_active': isActive ==='administracion' , 'not_active': isActive !=='administracion' }">
-            {{'nav_bar.administracion' | translate}}
-        </li>
-      </ul>
-  </div>
+    <div class="user-zone">
+        {{nombreUsuario}}
+        <hr /> {{centro}}
+    </div>
+    <div class="link-zone">
+        <ul>
+            <li [ngClass]="{'is_active': isActive ==='filtro' , 'not_active': isActive !=='filtro' }">
+                {{'nav_bar.filtro_instrumentos' | translate}}
+            </li>
+            <li [ngClass]="{'is_active': isActive ==='convenios' , 'not_active': isActive !=='convenios' }" (click)="showModel('convenios')"
+                routerLink="/">
+                {{'nav_bar.convenios' | translate}}
+            </li>
+            <li [ngClass]="{'is_active': isActive ==='parcels' , 'not_active': isActive !=='parcels' }" (click)="showModel('parcels')"
+                routerLink="/parcels">
+                {{'nav_bar.encomiendas' | translate}}
+            </li>
+            <li [ngClass]="{'is_active': isActive ==='decrees' , 'not_active': isActive !=='decrees' }" (click)="showModel('decrees')"
+                routerLink="/decrees">
+                {{'nav_bar.decretos_resoluciones' | translate}}
+            </li>
+            <li [ngClass]="{'is_active': isActive ==='accesos' , 'not_active': isActive !=='accesos' }">
+                {{'nav_bar.accesos' | translate}}
+            </li>
+            <li [ngClass]="{'is_active': isActive ==='administracion' , 'not_active': isActive !=='administracion' }">
+                {{'nav_bar.administracion' | translate}}
+            </li>
+        </ul>
+    </div>
 </nav>
