--- a/src/app/modules/agreements/search-criteria-agreements/search-criteria-agreements.component.html
+++ b/src/app/modules/agreements/search-criteria-agreements/search-criteria-agreements.component.html
@@ -1,3 +1,6 @@
+<div class="header_serach_criteria">
+    {{'buscador.criterio_busqueda' | translate}}
+</div>
 <div class="search_criteria">
   <div class="row">
     <div class="col-md-10 offset-md-1">
