[CONEX] Refaztorizacion de codigo

--- a/src/app/modules/parcels/parcels/details-parcels/details-parcels.component.html
+++ b/src/app/modules/parcels/parcels/details-parcels/details-parcels.component.html
@@ -1,3 +1,4 @@
-<p>
-  details-parcels works!
-</p>
+<app-secundary-nav></app-secundary-nav>
+<app-list-folder [listDetailsAgreement]="list_details_agreement"
+                 (resultModal)="getResultModal($event)">
+</app-list-folder>
